--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Trybewarts</title>
 </head>
 <body>
-    
+    <header class="header">
+        <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="">
+        <form action="" method="get" class="trybewarts-login">
+            <input type="email" name="email" id="header-email" placeholder="Email">
+            <input type="password" name="password" id="header-password" placeholder="Senha">
+            <button id="header-btn">Entrar</button>
+        </form>
+    </header>   
+    <script src="./script.js"></script>
 </body>
 </html>
