--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="header">
         <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="">
+        <h1 id="trybewarts-header-title">Trybewarts</h1>
         <form action="" method="get" class="trybewarts-login">
             <input type="email" name="email" id="header-email" placeholder="Email">
             <input type="password" name="password" id="header-password" placeholder="Senha">
