--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@
     </header>   
    
 <main id="main-cantainer">
-<form action= "" id="evaluation-form">
-
-
-
-</form>
-
-
-
+  <form action= "" id="evaluation-form">
+  </form>
+  <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
 </main>
 <script src="./script.js"></script>
 </body>
