--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
    
 <main id="main-cantainer">
   <form action= "" id="evaluation-form">
+    <input type="text" name="name" id="input-name" placeholder="Nome">
+    <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
+    <input type="email" name="email" id="input-email" placeholder="Email">
   </form>
   <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
 </main>
