--- a/index.html
+++ b/index.html
@@ -20,9 +20,20 @@
    
 <main id="main-cantainer">
   <form action= "" id="evaluation-form">
-    <input type="text" name="name" id="input-name" placeholder="Nome">
-    <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
-    <input type="email" name="email" id="input-email" placeholder="Email">
+    <div class="container-name">
+        <input type="text" name="name" id="input-name" placeholder="Nome">
+        <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
+    </div>
+    <div class="container-email">
+        <input type="email" name="email" id="input-email" placeholder="Email">
+        <label for="">Casas:</label>
+        <select name="" id="house">
+            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+            <option value="Corvinode" id="corvinode-house">Corvinode</option>
+            <option value="Pytherina" id="pytherina-house">Pytherina</option>
+        </select>
+    </div>
   </form>
   <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
 </main>
