--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Trybewarts</title>
 </head>
+
 <body>
     <header class="header">
         <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="">
@@ -16,27 +18,42 @@
             <input type="password" name="password" id="header-password" placeholder="Senha">
             <button id="header-btn">Entrar</button>
         </form>
-    </header>   
-   
-<main id="main-cantainer">
-  <form action= "" id="evaluation-form">
-    <div class="container-name">
-        <input type="text" name="name" id="input-name" placeholder="Nome">
-        <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
-    </div>
-    <div class="container-email">
-        <input type="email" name="email" id="input-email" placeholder="Email">
-        <label for="">Casas:</label>
-        <select name="" id="house">
-            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-            <option value="Corvinode" id="corvinode-house">Corvinode</option>
-            <option value="Pytherina" id="pytherina-house">Pytherina</option>
-        </select>
-    </div>
-  </form>
-  <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
-</main>
-<script src="./script.js"></script>
+    </header>
+
+    <main id="main-cantainer">
+        <form action="" id="evaluation-form">
+            <div class="container-name">
+                <input type="text" name="name" id="input-name" placeholder="Nome">
+                <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
+            </div>
+            <div class="container-email">
+                <input type="email" name="email" id="input-email" placeholder="Email">
+                <label for="house">Casas:</label>
+                <select name="" id="house">
+                    <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+                    <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+                    <option value="Corvinode" id="corvinode-house">Corvinode</option>
+                    <option value="Pytherina" id="pytherina-house">Pytherina</option>
+                </select>
+            </div>
+            <hr>
+            <div id="familys">
+                <label for="label-family" id="label-family">Qual sua família?</label>
+                <label for="frontend">
+                    <input type="radio" name="family" id="frontend" value="Frontend">
+                </label>
+                <label for="backend">
+                    <input type="radio" name="family" id="backend" value="Backend">
+                </label>
+                <label for="fullstack">
+                    <input type="radio" name="family" id="fullstack" value="FullStack">
+                </label>
+
+            </div>
+        </form>
+        <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
+    </main>
+    <script src="./script.js"></script>
 </body>
+
 </html>
