--- a/index.html
+++ b/index.html
@@ -48,7 +48,27 @@
                 <label for="fullstack">
                     <input type="radio" name="family" id="fullstack" value="FullStack">
                 </label>
-
+            </div>
+            <div id="check-content">
+                <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+                <label for="hofs">
+                    <input class="subject" type="checkbox" name="" id="hofs" value="HoFs">
+                </label>
+                <label for="jest">
+                    <input class="subject" type="checkbox" name="" id="jest" value="Jest">
+                </label>
+                <label for="promises">
+                    <input class="subject" type="checkbox" name="" id="promises" value="Promises">
+                </label>
+                <label for="react">
+                    <input class="subject" type="checkbox" name="" id="react" value="React">
+                </label>
+                <label for="sql">
+                    <input class="subject" type="checkbox" name="" id="sql" value="SQL">
+                </label>
+                <label for="python">
+                    <input class="subject"  type="checkbox" name="" id="python" value="Python">
+                </label>
             </div>
         </form>
         <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
