--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <input class="subject" type="checkbox" name="" id="python" value="Python">
                 </label>
             </div>
-            <div id="rate">
+            <div id="rate-container">
                 <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
                 <label for="one"> 
                     <input type="radio" name="rate" id="one" value="1">1
@@ -102,6 +102,10 @@
                 <label for="ten"> 
                     <input type="radio" name="rate" id="ten" value="10">10
                 </label>
+            </div>
+            <div class="textarea-container">
+                <label class="textarea" for="">Deixe seu comentário:</label>
+                <textarea name="" id="" cols="30" rows="10" maxlength="500"></textarea>
             </div>
         </form>
         <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
