--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                 <label class="textarea" for="">Deixe seu comentário:</label>
                 <textarea name="" id="" cols="30" rows="10" maxlength="500"></textarea>
             </div>
+            <div class="copyright">
+                <label id="label-infos" for="">Você concorda com o uso das informações acima?</label>
+                <input id="agreement" type="checkbox">
+            </div>
         </form>
         <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
     </main>
