--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                 <label id="label-infos" for="">Você concorda com o uso das informações acima?</label>
                 <input id="agreement" type="checkbox">
             </div>
+            <div class="button-container">
+                <button id="submit-btn" type="submit" disabled>Enviar</button>
+            </div>
         </form>
         <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
     </main>
