--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
         </form>
         <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
     </main>
+    <footer id="footer"> 
+        <small>Direitos reservados à Trybewarts©</small>
+    </footer>
     <script src="./script.js"></script>
 </body>
-
 </html>
