--- a/index.html
+++ b/index.html
@@ -72,40 +72,41 @@
             </div>
             <div id="rate-container">
                 <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
-                <label for="one"> 
+                <label for="one">
                     <input type="radio" name="rate" id="one" value="1">1
                 </label>
-                <label for="two"> 
+                <label for="two">
                     <input type="radio" name="rate" id="two" value="2">2
                 </label>
-                <label for="three"> 
+                <label for="three">
                     <input type="radio" name="rate" id="three" value="3">3
                 </label>
-                <label for="four"> 
+                <label for="four">
                     <input type="radio" name="rate" id="four" value="4">4
                 </label>
-                <label for="five"> 
+                <label for="five">
                     <input type="radio" name="rate" id="five" value="5">5
                 </label>
-                <label for="six"> 
+                <label for="six">
                     <input type="radio" name="rate" id="six" value="6">6
                 </label>
-                <label for="seven"> 
+                <label for="seven">
                     <input type="radio" name="rate" id="seven" value="7">7
                 </label>
-                <label for="eight"> 
+                <label for="eight">
                     <input type="radio" name="rate" id="eight" value="8">8
                 </label>
-                <label for="nine"> 
+                <label for="nine">
                     <input type="radio" name="rate" id="nine" value="9">9
                 </label>
-                <label for="ten"> 
+                <label for="ten">
                     <input type="radio" name="rate" id="ten" value="10">10
                 </label>
             </div>
             <div class="textarea-container">
-                <label class="textarea" for="">Deixe seu comentário:</label>
-                <textarea name="" id="" cols="30" rows="10" maxlength="500"></textarea>
+                <label for="textarea" class="textarea">Deixe seu comentário:</label>
+                <textarea name="coment" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+                <p for="" id="counter">500</p>
             </div>
             <div class="copyright">
                 <label id="label-infos" for="">Você concorda com o uso das informações acima?</label>
@@ -117,9 +118,10 @@
         </form>
         <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
     </main>
-    <footer id="footer"> 
+    <footer id="footer">
         <small>Direitos reservados à Trybewarts©</small>
     </footer>
     <script src="./script.js"></script>
 </body>
+
 </html>
