--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="">
         <h1 id="trybewarts-header-title">Trybewarts</h1>
         <form action="" method="get" class="trybewarts-login">
-            <input type="email" name="email" id="header-email" placeholder="Email">
-            <input type="password" name="password" id="header-password" placeholder="Senha">
+            <input class="input-group-text" type="email" name="email" id="header-email" placeholder="Email">
+            <input class="input-group-text" type="password" name="password" id="header-password" placeholder="Senha">
             <button id="header-btn">Entrar</button>
         </form>
     </header>
