Adiciona classe Bootstrap ao botão do header e altera cor do h1

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
         <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="">
         <h1 id="trybewarts-header-title">Trybewarts</h1>
         <form action="" method="get" class="trybewarts-login">
+            <!-- Yuri: adicionei classe input-group-text no forms do header -->
             <input class="input-group-text" type="email" name="email" id="header-email" placeholder="Email">
+            <!-- Yuri: adicionei classe input-group-text no forms do header -->
             <input class="input-group-text" type="password" name="password" id="header-password" placeholder="Senha">
-            <button id="header-btn">Entrar</button>
+            <!-- Yuri: adiciona classe btn e btn-primary no botão de input do header -->
+            <button class="btn btn-primary" id="header-btn">Entrar</button>
         </form>
     </header>
 
