Adiciona margin na main, estiliza inputs do forms e adiciona fonte

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <form action="" id="evaluation-form">
             <!-- Yuri: organiza as divs em sections -->
             <section id="info">
+                <h1 id="form-title">Formulário de Avaliação</h1>
                 <div class="container-name">
                     <input type="text" name="name" id="input-name" placeholder="Nome">
                     <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
