--- a/index.html
+++ b/index.html
@@ -50,35 +50,35 @@
             <section id="school-info">
                 <div id="familys">
                     <label for="label-family" id="label-family">Qual sua família?</label>
-                    <label for="frontend">
-                        <input type="radio" name="family" id="frontend" value="Frontend">
+                    <label for="frontend"> 
+                        <input type="radio" name="family" id="frontend" value="Frontend"> Família Frontend
                     </label>
                     <label for="backend">
-                        <input type="radio" name="family" id="backend" value="Backend">
+                        <input type="radio" name="family" id="backend" value="Backend"> Família Backend
                     </label>
                     <label for="fullstack">
-                        <input type="radio" name="family" id="fullstack" value="FullStack">
+                        <input type="radio" name="family" id="fullstack" value="FullStack"> Família FullStack"
                     </label>
                 </div>
                 <div id="check-content">
                     <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
                     <label for="hofs">
-                        <input class="subject" type="checkbox" name="" id="hofs" value="HoFs">
+                        <input class="subject" type="checkbox" name="" id="hofs" value="HoFs"> HoFs
                     </label>
                     <label for="jest">
-                        <input class="subject" type="checkbox" name="" id="jest" value="Jest">
+                        <input class="subject" type="checkbox" name="" id="jest" value="Jest"> Jest
                     </label>
                     <label for="promises">
-                        <input class="subject" type="checkbox" name="" id="promises" value="Promises">
+                        <input class="subject" type="checkbox" name="" id="promises" value="Promises"> Promises
                     </label>
                     <label for="react">
-                        <input class="subject" type="checkbox" name="" id="react" value="React">
+                        <input class="subject" type="checkbox" name="" id="react" value="React"> React
                     </label>
                     <label for="sql">
-                        <input class="subject" type="checkbox" name="" id="sql" value="SQL">
+                        <input class="subject" type="checkbox" name="" id="sql" value="SQL"> SQL
                     </label>
                     <label for="python">
-                        <input class="subject" type="checkbox" name="" id="python" value="Python">
+                        <input class="subject" type="checkbox" name="" id="python" value="Python"> Python
                     </label>
                 </div>
             </section>
