Corrige falhas no cypress, melhora layout e adiciona plano de fundo

--- a/index.html
+++ b/index.html
@@ -62,24 +62,28 @@
                 </div>
                 <div id="check-content">
                     <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
-                    <label for="hofs">
-                        <input class="subject" type="checkbox" name="" id="hofs" value="HoFs"> HoFs
-                    </label>
-                    <label for="jest">
-                        <input class="subject" type="checkbox" name="" id="jest" value="Jest"> Jest
-                    </label>
-                    <label for="promises">
-                        <input class="subject" type="checkbox" name="" id="promises" value="Promises"> Promises
-                    </label>
-                    <label for="react">
-                        <input class="subject" type="checkbox" name="" id="react" value="React"> React
-                    </label>
-                    <label for="sql">
-                        <input class="subject" type="checkbox" name="" id="sql" value="SQL"> SQL
-                    </label>
-                    <label for="python">
-                        <input class="subject" type="checkbox" name="" id="python" value="Python"> Python
-                    </label>
+                    <div id="language-container1">
+                        <label for="hofs">
+                            <input class="subject" type="checkbox" name="" id="hofs" value="HoFs"> HoFs
+                        </label>
+                        <label for="jest">
+                            <input class="subject" type="checkbox" name="" id="jest" value="Jest"> Jest
+                        </label>
+                        <label for="promises">
+                            <input class="subject" type="checkbox" name="" id="promises" value="Promises"> Promises
+                        </label>
+                    </div>
+                    <div id="language-container2">
+                        <label for="react">
+                            <input class="subject" type="checkbox" name="" id="react" value="React"> React
+                        </label>
+                        <label for="sql">
+                            <input class="subject" type="checkbox" name="" id="sql" value="SQL"> SQL
+                        </label>
+                        <label for="python">
+                            <input class="subject" type="checkbox" name="" id="python" value="Python"> Python
+                        </label>
+                    </div>
                 </div>
             </section>
             <hr>
@@ -129,7 +133,7 @@
                     <input id="agreement" type="checkbox">
                 </div>
                 <div class="button-container">
-                    <button id="submit-btn" type="submit" disabled>Enviar</button>
+                    <button class="btn btn-primary" id="submit-btn" type="submit" disabled>Enviar</button>
                 </div>
             </section>
         </form>
